...
          )}
        </TouchableOpacity>
        </Box>
        <Box className="mb-4">
            { isGroup ? (
              <>
                <Text className={`mb-2 text-lg ${isDarkMode == "dark"? 'text-white':'text-black'} font-semibold`}>Group Name</Text>
                  <TextInput
                    value={name}
                    onChangeText={setName}
                    placeholder="Enter room name"
                    className={`border border-gray-300 rounded px-3 py-2 ${isDarkMode == "dark"? 'text-white':'text-black'}`}
                  />
                <TouchableOpacity
                onPress={handleSave}
                  className="bg-blue-500 rounded px-4 py-2 items-center mt-2"
                  >
                  <Text className="text-white font-semibold">Save</Text>
              </TouchableOpacity>
              </>
            ) : (
              <Heading>{name}</Heading>
            )}
        </Box>
...
